--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,57 @@
     </parent>
 
     <properties>
+        <project.version>1.0-SNAPSHOT</project.version>
         <spring.boot.version>1.5.9.RELEASE</spring.boot.version>
+        <mybatis.version>1.3.1</mybatis.version>
+        <redis.version>1.4.7.RELEASE</redis.version>
+        <elasticsearch.version>5.6.5</elasticsearch.version>
     </properties>
 
     <dependencyManagement>
-        <dependencies></dependencies>
+        <dependencies>
+
+            <dependency>
+                <groupId>com.lwb</groupId>
+                <artifactId>web</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.lwb</groupId>
+                <artifactId>dao</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.lwb</groupId>
+                <artifactId>common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-redis</artifactId>
+                <version>${redis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.elasticsearch</groupId>
+                <artifactId>elasticsearch</artifactId>
+                <version>${elasticsearch.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-devtools</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
 </project>
