--- a/web/pom.xml
+++ b/web/pom.xml
@@ -6,10 +6,37 @@
         <artifactId>framework-learn</artifactId>
         <groupId>com.lwb</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>web</artifactId>
 
+    <dependencies>
 
+        <dependency>
+            <groupId>com.lwb</groupId>
+            <artifactId>dao</artifactId>
+        </dependency>
+
+        <dependency>
+            <artifactId>common</artifactId>
+            <groupId>com.lwb</groupId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+        </dependency>
+    </dependencies>
 </project>
