--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <spring.boot.version>1.5.9.RELEASE</spring.boot.version>
         <mybatis.version>1.3.1</mybatis.version>
         <redis.version>1.4.7.RELEASE</redis.version>
-        <elasticsearch.version>5.6.5</elasticsearch.version>
+        <elasticsearch.version>5.6.3</elasticsearch.version>
     </properties>
 
     <dependencyManagement>
@@ -67,9 +67,34 @@
             </dependency>
 
             <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>transport</artifactId>
+                <version>${elasticsearch.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-devtools</artifactId>
                 <version>${spring.boot.version}</version>
+            </dependency>
+
+            <!--  使用slf4j-->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.2.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.logback-extensions</groupId>
+                <artifactId>logback-ext-spring</artifactId>
+                <version>0.1.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
