--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <mybatis.version>1.3.1</mybatis.version>
         <redis.version>1.4.7.RELEASE</redis.version>
         <elasticsearch.version>5.6.3</elasticsearch.version>
+        <guava.version>23.0</guava.version>
     </properties>
 
     <dependencyManagement>
@@ -95,6 +96,12 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
