--- a/web/src/main/resources/application-dev.properties
+++ b/web/src/main/resources/application-dev.properties
@@ -5,5 +5,5 @@ jdbc.name=root
 jdbc.password=dev@2017bbd
 
 # ============================= elasticsearch =========================
-es.hosts=localhost:9300
+es.hosts=59.110.217.112:9300
 es.cluster=my-application
