--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
         <redis.version>1.4.7.RELEASE</redis.version>
         <elasticsearch.version>5.6.3</elasticsearch.version>
         <guava.version>23.0</guava.version>
+        <druid.version>1.1.9</druid.version>
+        <commons.beanutils.version>1.9.3</commons.beanutils.version>
     </properties>
 
     <dependencyManagement>
@@ -53,6 +55,19 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.version}</version>
+            </dependency>
+
+            <!-- druid数据库连接池 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons.beanutils.version}</version>
             </dependency>
 
             <dependency>
