--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -13,10 +13,17 @@
     <artifactId>dao</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.lwb</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
