--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
         <guava.version>23.0</guava.version>
         <druid.version>1.1.9</druid.version>
         <commons.beanutils.version>1.9.3</commons.beanutils.version>
+        <pagehelper.version>1.2.5</pagehelper.version>
+        <mysql.version>6.0.6</mysql.version>
+        <aspectj.version>1.8.13</aspectj.version>
     </properties>
 
     <dependencyManagement>
@@ -57,11 +60,23 @@
                 <version>${mybatis.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.version}</version>
+            </dependency>
+
             <!-- druid数据库连接池 -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
             </dependency>
 
             <dependency>
@@ -117,6 +132,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
