--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.profiles.active=@profileActive@
-mybatis.mapperLocations=classpath*:mapper/*.xml
 
+
+#mybatis配置
+mybatis.mapper-locations=classpath*:mapper/*.xml
+
+#pagehelper分页插件配置
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
