--- a/web/src/main/resources/application-dev.properties
+++ b/web/src/main/resources/application-dev.properties
@@ -1,35 +1,40 @@
 # ============================= spring.datasource =========================
     # 对应的自动化配置类org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/reddata_opinion?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/reddata_opinion?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
+spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.username=root
+spring.datasource.druid.password=123456
 
 # 下面为连接池的补充设置，应用到上面所有数据源中
     # 初始化大小，最小，最大
-spring.datasource.initialSize=5
-spring.datasource.minIdle=5
-spring.datasource.maxActive=20
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.max-active=20
     # 配置获取连接等待超时的时间
-spring.datasource.maxWait=60000
+spring.datasource.druid.max-wait=60000
     # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.druid.time-between-eviction-runs-millis=60000
     # 配置一个连接在池中最小生存的时间，单位是毫秒
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.validation-query=SELECT 1
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
     # 打开PSCache，并且指定每个连接上PSCache的大小
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
     # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-spring.datasource.filters=stat,wall,log4j
+spring.datasource.druid.filter-class-names=stat,wall,log4j
     # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 # 合并多个DruidDataSource的监控数据
 #spring.datasource.useGlobalDataSourceStat=true
+#配置spring关联
+#设置使用Cglib进行代理，因为部分需要代理的不是接口不适用于JDK动态代理，会报错
+spring.aop.proxy-target-class=true
+#配置Druid监控Spring包方法的调用
+spring.datasource.druid.aop-patterns=com.lwb.*
 
 # ============================= elasticsearch =========================
 es.hosts=59.110.217.112:9300
