--- a/web/src/main/resources/application-prod.properties
+++ b/web/src/main/resources/application-prod.properties
@@ -1,7 +1,53 @@
-# ============================= mysql =========================
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/reddata_publicity2?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
-jdbc.name=root
-jdbc.password=dev@2017bbd
+# ============================= jdbc配置 =========================
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/reddata_opinion?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
+spring.datasource.druid.username=root
+spring.datasource.druid.password=123456
+
+# ============================= 连接池配置 =========================
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.max-active=20
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
+#spring.datasource.druid.max-open-prepared-statements=
+spring.datasource.druid.validation-query=SELECT 1
+#spring.datasource.druid.validation-query-timeout=
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+#spring.datasource.druid.max-evictable-idle-time-millis=
+#spring.datasource.druid.filters=
+
+# ============================= 监控配置 =========================
+    # WebStatFilter配置，说明请参考Druid Wiki，配置_配置WebStatFilter
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.web-stat-filter.url-pattern=/*
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
+#spring.datasource.druid.web-stat-filter.session-stat-enable=
+#spring.datasource.druid.web-stat-filter.session-stat-max-count=
+#spring.datasource.druid.web-stat-filter.principal-session-name=
+#spring.datasource.druid.web-stat-filter.principal-cookie-name=
+#spring.datasource.druid.web-stat-filter.profile-enable=
+
+    # StatViewServlet配置，说明请参考Druid Wiki，配置_StatViewServlet配置
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+spring.datasource.druid.stat-view-servlet.reset-enable=false
+spring.datasource.druid.stat-view-servlet.login-username=admin
+spring.datasource.druid.stat-view-servlet.login-password=123456
+spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
+spring.datasource.druid.stat-view-servlet.deny=192.168.0.113
+
+    # Spring监控配置，说明请参考Druid Github Wiki，配置_Druid和Spring关联监控配置
+    # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
+spring.aop.proxy-target-class=true
+spring.datasource.druid.aop-patterns=com.lwb.*
 
 # ============================= elasticsearch =========================
+es.hosts=59.110.217.112:9300
+es.cluster=my-application
