--- a/web/src/main/resources/application-dev.properties
+++ b/web/src/main/resources/application-dev.properties
@@ -1,39 +1,51 @@
-# ============================= spring.datasource =========================
-    # 对应的自动化配置类org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# ============================= jdbc配置 =========================
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/reddata_opinion?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/reddata_opinion?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
 
-# 下面为连接池的补充设置，应用到上面所有数据源中
-    # 初始化大小，最小，最大
+# ============================= 连接池配置 =========================
 spring.datasource.druid.initial-size=5
-spring.datasource.druid.min-idle=5
 spring.datasource.druid.max-active=20
-    # 配置获取连接等待超时的时间
+spring.datasource.druid.min-idle=5
 spring.datasource.druid.max-wait=60000
-    # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-spring.datasource.druid.time-between-eviction-runs-millis=60000
-    # 配置一个连接在池中最小生存的时间，单位是毫秒
-spring.datasource.druid.min-evictable-idle-time-millis=300000
-spring.datasource.druid.validation-query=SELECT 1
-spring.datasource.druid.test-while-idle=true
-spring.datasource.druid.test-on-borrow=false
-spring.datasource.druid.test-on-return=false
-    # 打开PSCache，并且指定每个连接上PSCache的大小
 spring.datasource.druid.pool-prepared-statements=true
 spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
-    # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-spring.datasource.druid.filter-class-names=stat,wall,log4j
-    # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-# 合并多个DruidDataSource的监控数据
-#spring.datasource.useGlobalDataSourceStat=true
-#配置spring关联
-#设置使用Cglib进行代理，因为部分需要代理的不是接口不适用于JDK动态代理，会报错
+#spring.datasource.druid.max-open-prepared-statements=
+spring.datasource.druid.validation-query=SELECT 1
+#spring.datasource.druid.validation-query-timeout=
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+#spring.datasource.druid.max-evictable-idle-time-millis=
+#spring.datasource.druid.filters=
+
+# ============================= 监控配置 =========================
+# WebStatFilter配置，说明请参考Druid Wiki，配置_配置WebStatFilter
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.web-stat-filter.url-pattern=/*
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
+#spring.datasource.druid.web-stat-filter.session-stat-enable=
+#spring.datasource.druid.web-stat-filter.session-stat-max-count=
+#spring.datasource.druid.web-stat-filter.principal-session-name=
+#spring.datasource.druid.web-stat-filter.principal-cookie-name=
+#spring.datasource.druid.web-stat-filter.profile-enable=
+
+# StatViewServlet配置，说明请参考Druid Wiki，配置_StatViewServlet配置
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+spring.datasource.druid.stat-view-servlet.reset-enable=false
+spring.datasource.druid.stat-view-servlet.login-username=admin
+spring.datasource.druid.stat-view-servlet.login-password=123456
+spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
+spring.datasource.druid.stat-view-servlet.deny=192.168.0.113
+
+# Spring监控配置，说明请参考Druid Github Wiki，配置_Druid和Spring关联监控配置
+# Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
 spring.aop.proxy-target-class=true
-#配置Druid监控Spring包方法的调用
 spring.datasource.druid.aop-patterns=com.lwb.*
 
 # ============================= elasticsearch =========================
