--- a/web/src/main/resources/application-dev.properties
+++ b/web/src/main/resources/application-dev.properties
@@ -1,11 +1,11 @@
-# ============================= jdbc配置 =========================
+# ============================= jdbc\u914D\u7F6E =========================
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/reddata_opinion?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
+spring.datasource.druid.url=jdbc:mysql://59.110.217.112:3306/reddata_opinion?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
 spring.datasource.druid.username=root
-spring.datasource.druid.password=123456
+spring.datasource.druid.password=Root-1234
 
-# ============================= 连接池配置 =========================
+# ============================= \u8FDE\u63A5\u6C60\u914D\u7F6E =========================
 spring.datasource.druid.initial-size=5
 spring.datasource.druid.max-active=20
 spring.datasource.druid.min-idle=5
@@ -23,8 +23,8 @@ spring.datasource.druid.min-evictable-idle-time-millis=300000
 #spring.datasource.druid.max-evictable-idle-time-millis=
 #spring.datasource.druid.filters=
 
-# ============================= 监控配置 =========================
-# WebStatFilter配置，说明请参考Druid Wiki，配置_配置WebStatFilter
+# ============================= \u76D1\u63A7\u914D\u7F6E =========================
+# WebStatFilter\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Wiki\uFF0C\u914D\u7F6E_\u914D\u7F6EWebStatFilter
 spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.web-stat-filter.url-pattern=/*
 spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
@@ -34,17 +34,17 @@ spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,
 #spring.datasource.druid.web-stat-filter.principal-cookie-name=
 #spring.datasource.druid.web-stat-filter.profile-enable=
 
-# StatViewServlet配置，说明请参考Druid Wiki，配置_StatViewServlet配置
+# StatViewServlet\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Wiki\uFF0C\u914D\u7F6E_StatViewServlet\u914D\u7F6E
 spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
 spring.datasource.druid.stat-view-servlet.reset-enable=false
-spring.datasource.druid.stat-view-servlet.login-username=admin
-spring.datasource.druid.stat-view-servlet.login-password=123456
+#spring.datasource.druid.stat-view-servlet.login-username=admin
+#spring.datasource.druid.stat-view-servlet.login-password=123456
 spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
 spring.datasource.druid.stat-view-servlet.deny=192.168.0.113
 
-# Spring监控配置，说明请参考Druid Github Wiki，配置_Druid和Spring关联监控配置
-# Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
+# Spring\u76D1\u63A7\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Github Wiki\uFF0C\u914D\u7F6E_Druid\u548CSpring\u5173\u8054\u76D1\u63A7\u914D\u7F6E
+# Spring\u76D1\u63A7AOP\u5207\u5165\u70B9\uFF0C\u5982x.y.z.service.*,\u914D\u7F6E\u591A\u4E2A\u82F1\u6587\u9017\u53F7\u5206\u9694
 spring.aop.proxy-target-class=true
 spring.datasource.druid.aop-patterns=com.lwb.*
 
