--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <properties>
         <project.version>1.0-SNAPSHOT</project.version>
-        <spring.boot.version>1.5.9.RELEASE</spring.boot.version>
+        <spring.boot.version>1.5.12.RELEASE</spring.boot.version>
         <mybatis.version>1.3.1</mybatis.version>
         <redis.version>1.4.7.RELEASE</redis.version>
         <elasticsearch.version>5.6.3</elasticsearch.version>
@@ -31,6 +31,8 @@
         <pagehelper.version>1.2.5</pagehelper.version>
         <mysql.version>6.0.6</mysql.version>
         <aspectj.version>1.8.13</aspectj.version>
+        <fasterxml.jackson.version>2.8.5</fasterxml.jackson.version>
+        <fastjson.version>1.2.47</fastjson.version>
     </properties>
 
     <dependencyManagement>
@@ -52,6 +54,12 @@
                 <groupId>com.lwb</groupId>
                 <artifactId>common</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring.boot.version}</version>
             </dependency>
 
             <!-- mybatis-spring-boot-starter -->
@@ -155,6 +163,26 @@
                 <version>${spring.boot.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${fasterxml.jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${fasterxml.jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-jaxb-annotations</artifactId>
+                <version>${fasterxml.jackson.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
