--- a/web/src/main/resources/application-prod.properties
+++ b/web/src/main/resources/application-prod.properties
@@ -51,3 +51,10 @@ spring.datasource.druid.aop-patterns=com.lwb.*
 # ============================= elasticsearch =========================
 es.hosts=59.110.217.112:9300
 es.cluster=my-application
+
+# ============================= activemq =========================
+spring.activemq.broker-url=tcp://59.110.217.112:61616
+#spring.activemq.user=admin
+#spring.activemq.password=admin
+spring.activemq.in-memory=true  
+spring.activemq.pool.enabled=true
