--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,16 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>web</module>
-        <module>common</module>
-        <module>dao</module>
+        <module>system-study</module>
+        <module>system-common</module>
+        <module>system-dao</module>
+        <module>system-service</module>
+        <module>system-web</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.9.RELEASE</version>
+        <version>1.5.12.RELEASE</version>
     </parent>
 
     <properties>
@@ -34,6 +36,7 @@
         <fasterxml.jackson.version>2.8.5</fasterxml.jackson.version>
         <fastjson.version>1.2.47</fastjson.version>
         <activeMQ.version>5.14.4</activeMQ.version>
+        <joda.time.version>2.9.5</joda.time.version>
     </properties>
 
     <dependencyManagement>
@@ -41,19 +44,31 @@
 
             <dependency>
                 <groupId>com.lwb</groupId>
-                <artifactId>web</artifactId>
+                <artifactId>system-web</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.lwb</groupId>
-                <artifactId>dao</artifactId>
+                <artifactId>system-dao</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.lwb</groupId>
-                <artifactId>common</artifactId>
+                <artifactId>system-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.lwb</groupId>
+                <artifactId>system-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.lwb</groupId>
+                <artifactId>system-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -166,6 +181,12 @@
             </dependency>
 
             <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda.time.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
                 <version>${aspectj.version}</version>
@@ -187,6 +208,13 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>${fasterxml.jackson.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
