--- a/system-web/src/main/resources/application-prod.properties
+++ b/system-web/src/main/resources/application-prod.properties
@@ -61,3 +61,7 @@ spring.activemq.pool.enabled=true
 spring.activemq.pool.max-connections=100
 spring.activemq.send-timeout=3000
 spring.activemq.in-memory=false
+# \u4ECEActiveMQ5.12.2 \u5F00\u59CB\uFF0C\u4E3A\u4E86\u589E\u5F3A\u8FD9\u4E2A\u6846\u67B6\u7684\u5B89\u5168\u6027\uFF0CActiveMQ\u5C06\u5F3A\u5236\u7528\u6237\u914D\u7F6E\u53EF\u5E8F\u5217\u5316\u7684\u5305\u540D\uFF08\u4E0D\u914D\u7F6E\u7684\u8BDD\uFF0C\u62A5\u9519\u8BEFFailed to build body from content\uFF09
+# spring.activemq.packages.trusted \u4E5F\u53EF\u4EE5\u7528\u8FD9\u4E2A\u914D\u7F6E\u77E5\u540D\u54EA\u4E9B\u5305\u7684\u5BF9\u8C61\u53EF\u4EE5\u5E8F\u5217\u5316
+spring.activemq.packages.trust-all=true
+
